tests/paczka1/small_fuzzy/46915918.err
Error in line 7: LxB6fXQ33z SW75 W5,3
Error in line 11: S475 S475 5,2
